--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
     "axios": "^1.6.5",
     "body-parser": "^1.20.2",
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "@cyclonedx/cyclonedx-npm": "^1.16.1"
   }
 }
