--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,27 @@
-node_modules
+/node_modules
+react-frontend/.pnp
+.pnp.js
+react-frontend/node_modules
+react-frontend/reactcert/cert.pem
+react-frontend/reactcert/key.pem
+expressjs-backend/key.pem
+expressjs-backend/cert.pem
+expressjs-backend/node_modules
 .env
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
